<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="built_it_bigger">BUILT IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="spotify_streamer_toast">Spotify Streamer</string>
    <string name="general_toast">This button will launch</string>
    <string name="scores_toast">Scores App</string>
    <string name="library_toast">Library App</string>
    <string name="built_it_bigger_toast">Built It Bigger</string>
    <string name="xyz_reader_toast">XYZ Reader</string>
    <string name="capstone_my_own_app_toast">My Capstone App</string>
</resources>
